typescript/checker/tests/conformance/decorators/class/method/decoratorOnClassMethod8.ts.stderr
error: Unexpected token Some(At)
 --> $DIR/tests/conformance/decorators/class/method/decoratorOnClassMethod8.ts:6:5
  |
6 |     @dec method() {}
  |     ^

